--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,14 +1,12 @@
 name: CI
 
 on:
-  pull_request:
+  push:
     branches: [master]
-    types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
+  merge:
     timeout-minutes: 2
     runs-on: ubuntu-latest
     steps:
