--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,20 +1,23 @@
-name: CI
+name: Automerge
 
 on:
   push:
     branches: [master]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+
   merge:
+    continue-on-error: true
     timeout-minutes: 2
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set Git config
       run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "Github Actions"
+          
     - name: Merge master back to develop
       run: |
           git fetch --unshallow
@@ -22,3 +25,17 @@ jobs:
           git pull
           git merge --no-ff master -m "Merge branch 'master' into develop"
           git push
+          
+  create_pull_request:
+    needs: merge
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Create Pull Request
+      uses: repo-sync/pull-request@v2
+      with:
+        destination_branch: "develop"
+        pr_title: "Pulling master into develop"
+        pr_label: "auto-merge-pr"
+        github_token: ${{ secrets.GITHUB_TOKEN }}
